@@ -1,2 +1,0 @@
-Members,Large Plone Folder
-front-page,Document
