@@ -1,4 +1,0 @@
-[DEFAULT]
-description = 
-title = Portal
-
