@@ -1,0 +1,16 @@
+<?xml version="1.0"?>
+<site>
+ <property name="title">Plone site</property>
+ <property name="description"></property>
+ <property name="selectable_views" type="lines">
+  <element value="folder_listing"/>
+  <element value="news_listing"/>
+ </property>
+ <property name="email_from_address"
+    type="string"></property>
+ <property name="email_from_name"
+    type="string">Site Administrator</property>
+ <property name="validate_email" type="boolean">True</property>
+ <property name="email_charset" type="string">utf-8</property>
+ <property name="enable_permalink" type="boolean">False</property>
+</site>
